--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transcript to Notes</title>
+    <title>Article Note Taker</title>
 </head>
 <body>
     <div id="react-target"></div>
+    <script src="popup.js"></script>
 </body>
 </html>
